# substrate-primary-15-homework

./: .gitignore  README.md
homework-1/: README.md
homework-1/1056/: 比特币白皮书读后感.md
homework-1/1075/: wallet.txt  区块链技术与应用.md
homework-1/1262/: dot钱包地址.txt  多后感.txt
homework-1/1311/: 《比特币白皮书》观后感.md
homework-1/1369/: bit.txt
homework-1/1423/: 1_read.md  2_run.md  3_address.md
homework-1/1492/: 比特币白皮书观后感.md  运行solochain-template-node节点.md  钱包地址.txt
homework-1/1520/: 比特币白皮书读后感.md
homework-1/1522/: 观后感.md  运行.md
homework-1/1524/: 比特币白皮书学习纪要.md  钱包地址
homework-1/1525/: btc read.md  dot address.md
homework-1/1527/: polkadot 钱包地址.md  观后感.md
homework-1/1529/: 1.reflection_on_bitcoin_white_paper.md  2.launch_solo_node.md  3.wallet_address
homework-1/1530/: address.md  观后感.md
homework-1/1531/: Reaction.md  polkadot_wallet_address.md
homework-1/1540/: wallet_address.txt  比特币白皮书读后感.md
homework-1/1542/: reaction+address
homework-1/1545/: address.md  bitcoin_whitepaper_notes.md  proof.md
homework-1/1547/: UTXO.md  address.txt
homework-1/1549/: 白皮书读后感+地址.txt  白皮书读后感.txt
homework-1/1552/: bitcoin.txt  polkadot_wallet_address
homework-3/: README.md
homework-3/1525/mywallet/: Cargo.toml  README.md  mywallets.json
homework-3/1525/mywallet/src/: dotclientpool.rs  main.rs  wallet.rs
homework-3/1562/polkadot-wallet-cli/: Cargo.toml  wallet.json
homework-3/1562/polkadot-wallet-cli/artifacts/: polkadot_metadata_small.scale
homework-3/1562/polkadot-wallet-cli/src/: main.rs
homework-3/1562/polkadot-wallet-cli/src/wallet/: account.rs
(+487 files in other folders)
