[package]
name = "polkadot-wallet-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
subxt = {version = "0.37.0", features = ["substrate-compat"] }
subxt-signer= "0.37.0"
sp-core = { version = "34.0.0"}
tokio = { version = "1", features = ["full"] }
hex = "0.4.3"
clap = { version = "4.5.9", features = ["derive"] }
serde_json = "1.0.120"
serde = "1.0.204"

[source.crates-io]
replacement = "https://crates.io"
